# src/app/chat/pages/chat-assistant/chat-assistant.viewmodel.ts
@@ -1,0 +1,5 @@
+import { Chat } from 'src/app/shared/generated';
+
+export interface ChatAssistantViewModel {
+  chats: Chat[] | undefined;
+}
